--- a/{{ cookiecutter.repo_name }}/.travis.yml
+++ b/{{ cookiecutter.repo_name }}/.travis.yml
@@ -14,7 +14,8 @@ jobs:
         - make test
       after_script:
         - ls -la ./data/ # mlflow artifact & tracking data
-    - name: "Python 3.7"
+    - name: "tox"
+      env: TOX_PYTHON_ENV=py37
       python: 3.7
       before_install:
         - pwd
@@ -27,8 +28,7 @@ jobs:
       script:
         - tox -e $TOX_PYTHON_ENV -e lint
       after_success:
-        - codecov # submit coverage to https://codecov.io/gh/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/        
-      env: TOX_PYTHON_ENV=py37
+        - codecov # submit coverage to https://codecov.io/gh/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/
 before_install:
   - pwd
   - ls -la
