DST-20 Added repo_slug

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -2,7 +2,7 @@ VERSION=0.6.0
 
 DATA_DIR=data/
 IMAGE_OWNER={{ cookiecutter.github_username }}
-REPO_NAME={{ cookiecutter.repo_name }}
+REPO_NAME={{ cookiecutter.repo_slug }}
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
 JUPYTER_SCIPY_VERSION=dc9744740e12
