--- a/{{ cookiecutter.repo_slug }}/.travis.yml
+++ b/{{ cookiecutter.repo_slug }}/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       script:
         - tox -e $TOX_PYTHON_ENV -e lint
       after_success:
-        - codecov # submit coverage to https://codecov.io/gh/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/
+        - codecov # submit coverage to https://codecov.io/gh/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_slug }}/
 before_install:
   - pwd
   - ls -la
