--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python: 3.7
 env:
   global:
     - COOKIECUTTER_REPO_DIR=..
-    - COOKIECUTTER_REPO_NAME=test-repo
+    - COOKIECUTTER_REPO_NAME=Test Repo
+    - COOKIECUTTER_REPO_SLUG=test_repo
+    - COOKIECUTTER_PACKAGE_NAME=test_package
     - COOKIECUTTER_AUTHOR_NAME=test_author
     - COOKIECUTTER_AUTHOR_EMAIL=test_email
     - COOKIECUTTER_GITHUB_USERNAME=test_user
@@ -42,7 +44,7 @@ before_install:
 install:
   -
 before_script:
-  - cookiecutter --no-input ./ --output-dir $COOKIECUTTER_REPO_DIR repo_name=$COOKIECUTTER_REPO_NAME author_name=$COOKIECUTTER_AUTHOR_NAME author_email=$COOKIECUTTER_AUTHOR_EMAIL github_username=$COOKIECUTTER_GITHUB_USERNAME description=$COOKIECUTTER_DESCRIPTION
+  - cookiecutter --no-input ./ --output-dir $COOKIECUTTER_REPO_DIR repo_name=$COOKIECUTTER_REPO_NAME repo_slug=$COOKIECUTTER_REPO_SLUG package_name=$COOKIECUTTER_PACKAGE_NAME author_name=$COOKIECUTTER_AUTHOR_NAME author_email=$COOKIECUTTER_AUTHOR_EMAIL github_username=$COOKIECUTTER_GITHUB_USERNAME description=$COOKIECUTTER_DESCRIPTION
   - cd $COOKIECUTTER_REPO_DIR/$COOKIECUTTER_REPO_NAME
 script:
   - 
