--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ data/
 !.codeclimate.yml
 *.pkl
 
+# cookiecutter test project folder
+test-project/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
