CC-24 Incremented mlflow version to v1.8.*

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -19,6 +19,7 @@ JUPYTER_ENABLE_LAB=yes
 JUPYTER_DOCKER_COMPOSE_USER=root
 
 MLFLOW_IMAGE_NAME=mlflow
+MLFLOW_VERSION=1.8.*
 MLFLOW_ARTIFACT_STORE=data/artifacts
 MLFLOW_BACKEND_STORE=postgres
 MLFLOW_TRACKING_SERVER_HOST=0.0.0.0
