--- a/{{ cookiecutter.repo_slug }}/Makefile
+++ b/{{ cookiecutter.repo_slug }}/Makefile
@@ -155,7 +155,7 @@ prune:
 build:
 	DOCKER_BUILDKIT=${BUILDKIT} COMPOSE_DOCKER_CLI_BUILD=${BUILDKIT} \
 	JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE} JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION} \
-	JUPYTER_TARGET=${JUPYTER_TARGET} \
+	JUPYTER_TARGET=${JUPYTER_TARGET} MLFLOW_VERSION=${MLFLOW_VERSION} \
 	POSTGRES_UID=${POSTGRES_UID} POSTGRES_GID=${POSTGRES_GID} \
 	docker-compose build ${BUILD_OPTS}
 
