Simplified Jupyter docker multi-stage build - Merged `jupyter-custom` and `editable` stages to a single stage called `jupyter` - Modified .env file to reflect the changes

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -12,11 +12,9 @@ JUPYTER_PYSPARK_IMAGE=pyspark-notebook
 JUPYTER_PYSPARK_VERSION=dc9744740e12
 
 JUPYTER_PORT=8888
-JUPYTER_TARGET=editable
-JUPYTER_STATIC_TARGET=static
+JUPYTER_TARGET=jupyter
 JUPYTER_TEST_TARGET=test
 JUPYTER_ENABLE_LAB=yes
-JUPYTER_DOCKER_COMPOSE_USER=root
 
 MLFLOW_IMAGE_NAME=mlflow
 MLFLOW_VERSION=1.8.*
