Shortened jupyter docker image name

--- a/{{ cookiecutter.repo_slug }}/docker-compose.yml
+++ b/{{ cookiecutter.repo_slug }}/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         - MLFLOW_VERSION=${MLFLOW_VERSION}
         - JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE}
         - JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION}
-    image: ${IMAGE_OWNER}/${REPO_NAME}/${JUPYTER_BASE_IMAGE}-${JUPYTER_TARGET}:${VERSION}
+    image: ${IMAGE_OWNER}/${REPO_NAME}/${JUPYTER_TARGET}:${VERSION}
     ports:
       - "${JUPYTER_PORT}:${JUPYTER_PORT}"
     depends_on: 
