CC-28 Added WAIT_FOR_IT_TIMEOUT

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -3,6 +3,7 @@ VERSION=0.8.0
 DATA_DIR=data/
 IMAGE_OWNER={{ cookiecutter.github_username }}
 REPO_NAME={{ cookiecutter.repo_slug }}
+WAIT_FOR_IT_TIMEOUT=60
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
 JUPYTER_SCIPY_VERSION=dc9744740e12
