--- a/{{ cookiecutter.repo_slug }}/docker/mlflow/Dockerfile
+++ b/{{ cookiecutter.repo_slug }}/docker/mlflow/Dockerfile
@@ -3,13 +3,16 @@ FROM python:3.7
 EXPOSE 5000
 
 ARG MLFLOW_VERSION
+ARG SERVER_DIR=/server
+
 RUN pip install mlflow==$MLFLOW_VERSION psycopg2==2.8.* && \
-    mkdir -p /server
+    mkdir -p ${SERVER_DIR}
 
-COPY ./scripts/wait-for-it.sh /server/
-RUN chmod +x /server/wait-for-it.sh
+COPY ./scripts/run_mlflow.sh ${SERVER_DIR}/
+COPY ./scripts/wait-for-it.sh ${SERVER_DIR}/
+RUN chmod +x ${SERVER_DIR}/wait-for-it.sh
 
-WORKDIR /server
+WORKDIR ${SERVER_DIR}
 
 # wait as long as 60 seconds for posgres to init db, which takes a lot of time particularly in mac osx
 CMD ./wait-for-it.sh ${MLFLOW_BACKEND_STORE}:${POSTGRES_PORT} -t ${WAIT_FOR_IT_TIMEOUT} -- \
