--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -32,4 +32,4 @@ POSTGRES_PASSWORD=secret
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=mlflow
 
-PYTHON_DEV_IMAGE_NAME=python-dev
+PYTHON_DEV_IMAGE_NAME={{ cookiecutter.repo_slug }}/python-dev
