Renamed REPO_NAME in .env to REPO_SLUG

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -2,7 +2,7 @@ VERSION=0.9.0
 
 DATA_DIR=data/
 IMAGE_OWNER={{ cookiecutter.github_username }}
-REPO_NAME={{ cookiecutter.repo_slug }}
+REPO_SLUG={{ cookiecutter.repo_slug }}
 WAIT_FOR_IT_TIMEOUT=60
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
