CC-35 Added sphinx_rtd_theme to Sphinx dockerfile

--- a/docker/sphinx/Dockerfile
+++ b/docker/sphinx/Dockerfile
@@ -1,5 +1,6 @@
 FROM sphinxdoc/sphinx
 
 RUN useradd -ms /bin/bash sphinxuser && \
-    chown -R sphinxuser /docs 
+    chown -R sphinxuser /docs && \
+    pip install sphinx_rtd_theme
 USER sphinxuser
