CC-25 Added make clean before make html

--- a/docker/sphinx/Dockerfile
+++ b/docker/sphinx/Dockerfile
@@ -4,3 +4,5 @@ RUN useradd -ms /bin/bash sphinxuser && \
     chown -R sphinxuser /docs && \
     pip install sphinx_rtd_theme
 USER sphinxuser
+
+CMD make clean; make html
