CC-25 Passing Sphinx version as an arg to the dockerfile

--- a/docker/sphinx/Dockerfile
+++ b/docker/sphinx/Dockerfile
@@ -1,4 +1,5 @@
-FROM sphinxdoc/sphinx
+ARG SPHINX_VERSION
+FROM sphinxdoc/sphinx:${SPHINX_VERSION}
 
 RUN useradd -ms /bin/bash sphinxuser && \
     chown -R sphinxuser /docs && \
