--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ jobs:
         - id
         - docker --version
         # skip pip install steps
+      install:
+        - 
       before_script:
         - # don't cut a project, stay in the base folder
       script:
