CC-44 Added sphinx makefile commands and moved changelog

--- a/{{ cookiecutter.repo_slug }}/.env
+++ b/{{ cookiecutter.repo_slug }}/.env
@@ -33,3 +33,6 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=mlflow
 
 PYTHON_DEV_IMAGE_NAME={{ cookiecutter.repo_slug }}/python-dev
+
+SPHINX_IMAGE_NAME={{ cookiecutter.repo_slug }}/sphinx
+SPHINX_VERSION=3.0.3
