CC-44 Fixed flake8 repo path (how was it working before?)

--- a/{{ cookiecutter.repo_slug }}/tox.ini
+++ b/{{ cookiecutter.repo_slug }}/tox.ini
@@ -39,7 +39,7 @@ skip_install = true
 
 [testenv:flake8]
 commands =
-    flake8 {{ cookiecutter.package_name }}
+    flake8 ./src/{{ cookiecutter.package_name }}
     flake8 setup.py
 deps =
     flake8
