CC-44 Added sphinx documentation to project travis

--- a/{{ cookiecutter.repo_slug }}/.travis.yml
+++ b/{{ cookiecutter.repo_slug }}/.travis.yml
@@ -29,6 +29,14 @@ jobs:
         - tox -e $TOX_PYTHON_ENV -e lint
       after_success:
         - codecov # submit coverage to https://codecov.io/gh/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_slug }}/
+    - name: "documentation"
+      install:
+        - pip install sphinx
+        - pip install sphinx_rtd_theme
+      before_script:
+        - cd docs
+      script:
+        - make html SPHINXOPTS:="-nWT -b dummy"
 before_install:
   - pwd
   - ls -la
