CC-44 Added new exclusions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,9 @@ data/
 !.codeclimate.yml
 !*.env
 !.pylintrc
+!.github
+!*.dockerignore
 *.pkl
-
-# cookiecutter test project folder
-test-project/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
