--- a/{{ cookiecutter.repo_slug }}/docker/sphinx/Dockerfile
+++ b/{{ cookiecutter.repo_slug }}/docker/sphinx/Dockerfile
@@ -4,8 +4,11 @@ FROM sphinxdoc/sphinx:${SPHINX_VERSION}
 ENV SPHINX_OPTS=
 
 RUN useradd -ms /bin/bash sphinxuser && \
-    chown -R sphinxuser /docs && \
+    mkdir /{{ cookiecutter.repo_slug }} && \
+    chown -R sphinxuser /{{ cookiecutter.repo_slug }} && \
     pip install sphinx_rtd_theme
 USER sphinxuser
+
+WORKDIR /{{ cookiecutter.repo_slug }}/docs
 
 CMD make clean; make html SPHINXOPTS:=$SPHINX_OPTS
