CC-44 Removed extra AUTHORS file

--- a/docker/sphinx/Dockerfile
+++ b/docker/sphinx/Dockerfile
@@ -4,8 +4,11 @@ FROM sphinxdoc/sphinx:${SPHINX_VERSION}
 ENV SPHINX_OPTS=
 
 RUN useradd -ms /bin/bash sphinxuser && \
-    chown -R sphinxuser /docs && \
+    mkdir /repo && \
+    chown -R sphinxuser /repo && \
     pip install sphinx_rtd_theme
 USER sphinxuser
+
+WORKDIR /repo/docs
 
 CMD make clean; make html SPHINXOPTS:=$SPHINX_OPTS
