CC-44 Created sphinx-clean Makefile command

--- a/{{ cookiecutter.repo_slug }}/Makefile
+++ b/{{ cookiecutter.repo_slug }}/Makefile
@@ -8,7 +8,7 @@ SHELL := /bin/bash
 	prune build \
 	up run down down-all \
 	python-dev-build tox \
-	sphinx-build sphinx-apidoc sphinx-html sphinx-html-test \
+	sphinx-build sphinx-clean sphinx-apidoc sphinx-html sphinx-html-test \
 	find-port-usage debug-travis
 
 HELP_PADDING = 28
@@ -89,8 +89,9 @@ help:
 	@printf "\n"
 	@printf "======= Documentation ======\n"
 	@printf "$(pretty_command): builds sphinx docker image\n" sphinx-build
+	@printf "$(pretty_command): cleans documentation at \"./docs/_build/\"\n" sphinx-clean
 	@printf "$(pretty_command): creates rst documentation from python docstring\n" sphinx-apidoc
-	@printf "$(pretty_command): builds sphinx html docs\n" sphinx-html
+	@printf "$(pretty_command): builds sphinx html docs at \"./docs/_build/html\"\n" sphinx-html
 	@printf "$(padded_str)SPHINX_OPTS, options to pass to sphinx (default: $(SPHINX_OPTS))\n"
 	@printf "$(pretty_command): tests sphinx html build\n" sphinx-html-test
 	@printf "\n"
@@ -220,13 +221,19 @@ sphinx-build:
 		-f ./docker/sphinx/Dockerfile \
 		-t ${IMAGE_OWNER}/${SPHINX_IMAGE_NAME}:${SPHINX_VERSION}
 
+sphinx-clean: sphinx-build
+	docker run -it --rm \
+		-v ${MAKEFILE_DIR}:/{{ cookiecutter.repo_slug }}/ \
+		${IMAGE_OWNER}/${SPHINX_IMAGE_NAME}:${SPHINX_VERSION} \
+		make clean
+
 sphinx-apidoc: sphinx-build
 	docker run -it --rm \
 		-v ${MAKEFILE_DIR}:/{{ cookiecutter.repo_slug }}/ \
 		${IMAGE_OWNER}/${SPHINX_IMAGE_NAME}:${SPHINX_VERSION} \
 		sphinx-apidoc -f -o ./ ../src/{{ cookiecutter.package_name }}
 
-sphinx-html: sphinx-apidoc
+sphinx-html: sphinx-clean sphinx-apidoc
 	docker run -it --rm \
 		-v ${MAKEFILE_DIR}:/{{ cookiecutter.repo_slug }}/ \
 		-e SPHINX_OPTS="${SPHINX_OPTS}" \
