--- a/{{ cookiecutter.repo_slug }}/docker/sphinx/Dockerfile
+++ b/{{ cookiecutter.repo_slug }}/docker/sphinx/Dockerfile
@@ -11,4 +11,4 @@ USER sphinxuser
 
 WORKDIR /{{ cookiecutter.repo_slug }}/docs
 
-CMD make clean; make html SPHINXOPTS:=$SPHINX_OPTS
+CMD make html SPHINXOPTS:=$SPHINX_OPTS
