--- a/{{ cookiecutter.repo_slug }}/docker-compose.yml
+++ b/{{ cookiecutter.repo_slug }}/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         - MLFLOW_VERSION=${MLFLOW_VERSION}
         - JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE}
         - JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION}
+        - JUPYTER_USERNAME=${JUPYTER_USERNAME}
     image: ${IMAGE_OWNER}/${REPO_SLUG}/${JUPYTER_TARGET}:${VERSION}
     ports:
       - "${JUPYTER_PORT}:${JUPYTER_PORT}"
