--- a/{{ cookiecutter.repo_slug }}/docker/jupyter/Dockerfile
+++ b/{{ cookiecutter.repo_slug }}/docker/jupyter/Dockerfile
@@ -54,7 +54,7 @@ COPY ./docker/jupyter/requirements.test.txt ${TEST_DIR}/
 RUN pip install -r ${TEST_DIR}/requirements.test.txt
 
 COPY ./tests/docker ${TEST_DIR}/docker
-COPY ./docker/jupyter/scripts/run_tests.sh ${TEST_DIR}/
+COPY ./tests/run_docker_tests.sh ${TEST_DIR}/
 COPY ./docker/jupyter/scripts/wait-for-it.sh ${TEST_DIR}/
 USER root
 RUN chmod +x ${TEST_DIR}/wait-for-it.sh
