Corrected data folder in gitignore

--- a/{{ cookiecutter.repo_slug }}/.gitignore
+++ b/{{ cookiecutter.repo_slug }}/.gitignore
@@ -10,6 +10,8 @@
 *.*~
 .*
 secrets.ini
+!src/{{ cookiecutter.package_name }}/data/
+!tests/python/data/
 !.gitignore
 !.travis.yml
 !.codeclimate.yml
