CC-54 Added mock to tox test requirements

--- a/{{ cookiecutter.repo_slug }}/tox.ini
+++ b/{{ cookiecutter.repo_slug }}/tox.ini
@@ -19,6 +19,7 @@ commands =
     pytest ./tests/python -m "not smoke" --cov={{ cookiecutter.package_name }} --cov-report term --cov-append
 description = run unittests
 deps =
+    mock
     pytest
     pytest-cov
 depends =
