--- a/{{ cookiecutter.repo_slug }}/tox.ini
+++ b/{{ cookiecutter.repo_slug }}/tox.ini
@@ -16,7 +16,7 @@ skip_missing_interpreters = true
 commands = 
     python --version
     python -c "from {{ cookiecutter.package_name }} import __version__; print(__version__)"
-    pytest ./tests/python -m "not smoke" --cov={{ cookiecutter.package_name }} --cov-report term --cov-append
+    pytest ./tests/python -m "not smoke" -W error::FutureWarning --cov={{ cookiecutter.package_name }} --cov-report term --cov-append
 description = run unittests
 deps =
     mock
